# domestique-oss

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  app_entry.py  docker-compose.yml  fix-cert.ps1  install.bat  install.ps1  pyproject.toml  run.bat  run.ps1  run.sh  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  eval.yml  live-providers.yml  redaction-metrics.yml  release.yml
app/: __init__.py  __main__.py  main.py
app/assets/: dashboard.html
app/config/: __init__.py  schema.py  store.py
app/native/: __init__.py  app_delegate.py  status_bar.py  window.py
app/server/: api.py
app/services/: __init__.py  analytics.py  approval.py  audit.py  autolaunch.py  benchmark.py  cert_manager.py  code_detection.py  context.py  file_scanner.py  injection.py  interceptor.py  mitm_addon.py  notifications.py  pipeline_config.py  policy.py  proxy.py  redaction.py  runtime.py  siem.py  tray.py  watchdog.py
app/tests/: test_analytics.py  test_approval.py  test_audit.py  test_autolaunch.py  test_code_detection.py  test_config.py  test_context.py  test_file_scanner.py  test_injection.py  test_interceptor.py  test_main_banner.py  test_main_browser_interception_firstrun.py  test_main_cert_bootstrap.py  test_main_mode_and_tray.py  test_main_ollama_retry.py  test_mitm_addon_background_init.py  test_mitm_addon_inspect.py  test_policy.py  test_proxy_mitm_confdir.py  test_redaction.py  test_response_scanning.py  test_response_streaming_async.py  test_sdk.py  test_server.py  test_services.py  test_siem.py  test_tray_toggles.py  test_watchdog.py
bench/: __init__.py  comprehensive_eval.py  evaluate.py  public_datasets.py  redaction_bench.py  redaction_compare.py
bench/browser_perf/: __init__.py  bench_response_streaming.py
bench/eval/: __init__.py  __main__.py  corpus.py  mock_upstream.py  runner.py  scorecard.py
benchmarks/: __init__.py  redaction_bench.py  redaction_compare.py
benchmarks/browser_perf/: __init__.py  bench_response_streaming.py
benchmarks/concurrency/: __init__.py  __main__.py
benchmarks/datasets/: __init__.py  comprehensive_eval.py  dataset.py  evaluate.py  public_datasets.py
benchmarks/eval/: __main__.py  metrics.py  runner.py  scorecard.py
benchmarks/file_scanning/: RESULTS.md  benchmark_results.json  generate_benchmark.py  run_benchmark.py
docs/: AGENTS.md  CHANGELOG.md  architecture.md  benchmarking.md  codebase-context.md  deployment-guide.md
docs/recipes/: README.md  aider.md  claude-code.md  codex.md  cursor.md  generic.md
domestique/: __init__.py  app.py  branding.py  callback.py  cli.py  config.py  config_loader.py  console.py  debug_trace.py  gateway.py  labels.py  models.py  redact.py  redaction.py  report.py  sdk.py  setup_wizard.py  taxonomy.py  taxonomy_store.py
domestique/audit/: __init__.py
domestique/detectors/: __init__.py  _offload.py  local_llm.py  pii.py  registry.py  secrets.py  semantic.py  status.py
domestique/policy/: __init__.py  browser-rules.yaml  cli-rules.yaml
domestique/transport/: __init__.py
domestique/vault/: __init__.py  pinned.py  service.py  session.py  stream.py
domestique_app/: __init__.py  __main__.py  main.py
domestique_app/assets/: dashboard.html  icon.icns
domestique_app/config/: schema.py  store.py
domestique_app/native/: app_delegate.py  status_bar.py  window.py
domestique_app/server/: api.py
domestique_app/services/: analytics.py  approval.py  audit.py  autolaunch.py  benchmark.py  cert_manager.py  code_detection.py  context.py  file_scanner.py  injection.py  interceptor.py  mitm_addon.py  notifications.py  pipeline_config.py  proxy.py  siem.py  tray.py  watchdog.py
domestique_app/tests/: __init__.py  test_analytics.py  test_approval.py  test_audit.py  test_autolaunch.py  test_code_detection.py  test_config.py  test_context.py  test_file_scanner.py  test_injection.py  test_interceptor.py  test_main_banner.py  test_main_browser_interception_firstrun.py  test_main_cert_bootstrap.py  test_main_mode_and_tray.py  test_main_ollama_retry.py  test_mitm_addon_background_init.py  test_mitm_addon_inspect.py  test_policy.py  test_proxy_mitm_confdir.py  test_response_scanning.py  test_response_streaming_async.py  test_server.py  test_services.py  test_siem.py  test_tray_toggles.py  test_watchdog.py
infra/: nginx.conf
infra/certs/: deploy-ca-macos.sh  deploy-ca-windows.ps1  fix-cert.ps1  fix-cert.sh  generate-ca.sh
infra/dns/: coredns-config.yaml  llm-hosts
infra/pac/: proxy.pac
llmguard/: __init__.py  app.py  callback.py  config.py  debug_trace.py  extract.py  gateway.py  models.py  sdk.py
llmguard/audit/: __init__.py
llmguard/detectors/: __init__.py  local_llm.py  pii.py  registry.py  secrets.py  semantic.py
llmguard/policy/: __init__.py  rules.yaml  wedge_rules.yaml
llmguard/transport/: __init__.py
scripts/: install.py  install.sh  live_openai_smoke.py  reversible_roundtrip_demo.py  setup_workshop.sh  toggle-quic.ps1
tests/: conftest.py  test_debug_trace.py
tests/eval/: test_cli.py  test_corpus.py  test_metrics.py  test_mock_upstream.py  test_runner_e2e.py  test_scorecard.py
tests/integration/: test_app.py  test_live_providers.py
tests/redaction_metrics/: test_metrics.py
tests/unit/: conftest.py  test_branding.py  test_cli_browser.py  test_cli_browser_launch.py  test_cli_feedback.py  test_cli_first_run.py  test_cli_policy.py  test_config_loader.py  test_console.py  test_cross_platform.py  test_demo_render.py  test_demo_smoke.py  test_detector_offload.py  test_detector_status.py  test_extract.py  test_finding_span.py  test_gateway_feedback.py  test_gateway_proxy.py  test_gateway_routing.py  test_gliner_detector.py  test_hardware_profile.py  test_install_linux_venv.py  test_install_ollama_retry.py  test_install_presets.py  test_install_shim.py  test_notification_coalescing.py  (+17 more)
(+38 files in other folders)
