[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmguard"
version = "0.1.0"
description = "Transparent enterprise firewall for LLM API traffic"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "litellm>=1.80,<1.81",
    "pydantic>=2.10,<2.12",
    "pydantic-settings>=2.7,<2.12",
    "httpx>=0.28,<1",
    "structlog>=24.4,<25",
    "pyyaml>=6,<7",
    "python-dotenv>=1,<2",
    "prometheus-client>=0.21,<1",
]

[project.scripts]
llmguard = "llmguard.cli:main"

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.8,<4",
]
semantic = [
    "sentence-transformers>=3.0,<4",
    "numpy>=1.26,<3",
]
ner = [
    "gliner>=0.2,<1",
]
local-llm = [
    "httpx>=0.28,<1",
]
browser-proxy = [
    "mitmproxy>=10,<12",
]
file-scanning = [
    "pdfminer.six>=20240706",
    "openpyxl>=3.1,<4",
    "pillow>=10,<12",
    "pytesseract>=0.3,<1",
]
macos-native = [
    "pyobjc-framework-Cocoa>=10,<12",
    "pyobjc-framework-WebKit>=10,<12",
    "pyobjc-framework-Vision>=10,<12",
    "py2app>=0.28,<1",
]
desktop = [
    "llmguard[browser-proxy,file-scanning]",
    "pystray>=0.19,<1",
    "pillow>=10,<12",
]
bench = [
    "llmguard[pii,semantic,ner,local-llm]",
    "datasets>=3.0,<4",
]
all = [
    "llmguard[pii,semantic,ner,local-llm,browser-proxy,file-scanning]",
]
workshop = [
    "llmguard[bench]",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-benchmark>=4,<5",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[tool.setuptools.packages.find]
include = ["llmguard*"]

[tool.setuptools.package-data]
"llmguard.policy" = ["*.yaml"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "SIM", "TCH"]
ignore = ["ANN401", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
# Third-party libraries used by llmguard that ship no type stubs / py.typed marker,
# OR that live in optional extras not installed in the core `types` CI job (which
# runs `pip install -e ".[dev]"` only). The core type gate must not depend on which
# ML extras happen to be present in the environment.
module = [
    "yaml",
    "sentence_transformers",
    "sentence_transformers.*",
    "gliner",
    "gliner.*",
    "numpy",
    "numpy.*",
    "spacy",
    "spacy.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# app/ is a separate package, out of scope for this task (which covers llmguard/ only).
# It surfaces here only because mypy follows llmguard's imports of it (llmguard/callback.py,
# llmguard/sdk.py). Suppress errors originating in app/ itself without disabling type
# checking of the llmguard code that uses it.
module = ["app.*"]
follow_imports = "silent"

[[tool.mypy.overrides]]
# BASELINE: pre-existing type debt. Ratchet DOWN — never add modules here.
# Remove a line once its module type-checks clean.
module = [
    "llmguard.debug_trace",
    "llmguard.sdk",
    "llmguard.detectors.local_llm",
    "llmguard.audit",
    "llmguard.transport",
    "llmguard.detectors.pii",
    "llmguard.detectors.registry",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
