[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domestique"
version = "0.1.0"
description = "Transparent firewall for LLM API traffic"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "litellm>=1.80,<1.93",
    "pydantic>=2.10,<2.14",
    "pydantic-settings>=2.7,<2.15",
    "httpx>=0.28,<1",
    "structlog>=24.4,<27",
    "pyyaml>=6,<7",
    "python-dotenv>=1,<2",
    "prometheus-client>=0.21,<1",
]

[project.scripts]
domestique = "domestique.cli:main"

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.8,<4",
]
semantic = [
    "sentence-transformers>=3.0,<6",
    "numpy>=1.26,<3",
]
ner = [
    "gliner>=0.2,<1",
]
local-llm = [
    "httpx>=0.28,<1",
]
browser-proxy = [
    "mitmproxy>=10,<12",
]
file-scanning = [
    "pdfminer.six>=20240706",
    "openpyxl>=3.1,<4",
    "pillow>=10,<13",
    "pytesseract>=0.3,<1",
]
macos-native = [
    "pyobjc-framework-Cocoa>=10,<13",
    "pyobjc-framework-WebKit>=10,<13",
    "pyobjc-framework-Vision>=10,<13",
    "py2app>=0.28,<1",
]
desktop = [
    "domestique[browser-proxy,file-scanning]",
    "pystray>=0.19,<1",
    "pillow>=10,<13",
]
bench = [
    "domestique[pii,semantic,ner,local-llm]",
    "datasets>=3.0,<6",
]
all = [
    "domestique[pii,semantic,ner,local-llm,browser-proxy,file-scanning]",
]
workshop = [
    "domestique[bench]",
]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.25,<2",
    "pytest-benchmark>=4,<6",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<3",
    "pre-commit>=4,<5",
]

[tool.setuptools.packages.find]
# domestique_app* ships the dashboard/browser-protection desktop app in the
# wheel so `domestique browser on` has something to talk to after a plain pip
# install. domestique/ still never imports domestique_app/ (docs/architecture.md)
# — packaging them together does not couple them at runtime.
include = ["domestique*", "domestique_app*"]
exclude = ["domestique_app.tests*"]

[tool.setuptools.package-data]
"domestique.policy" = ["*.yaml"]
# Dashboard page + icons; without these `python -m domestique_app` from a wheel install
# would 404 the dashboard and show no tray/menu-bar icon.
domestique_app = ["assets/*.html", "assets/*.png", "assets/*.icns", "assets/images/*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "SIM", "TCH"]
ignore = ["ANN401", "S101"]

[tool.ruff.lint.per-file-ignores]
# Test functions are self-documenting fixtures; requiring return/argument type
# annotations on every test method adds noise without type-safety value. (Core
# `ruff check domestique` doesn't lint tests at all; this keeps `ruff check app`
# consistent with that.)
"domestique_app/tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
# Third-party libraries used by domestique that ship no type stubs / py.typed marker,
# OR that live in optional extras not installed in the core `types` CI job (which
# runs `pip install -e ".[dev]"` only). The core type gate must not depend on which
# ML extras happen to be present in the environment.
module = [
    "yaml",
    "sentence_transformers",
    "sentence_transformers.*",
    "gliner",
    "gliner.*",
    "numpy",
    "numpy.*",
    "spacy",
    "spacy.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# domestique_app/ is a separate package, out of scope for this task (which covers domestique/ only).
# It surfaces here only because mypy follows domestique's imports of it (domestique/callback.py,
# domestique/sdk.py). Suppress errors originating in domestique_app/ itself without disabling type
# checking of the domestique code that uses it.
module = ["domestique_app.*"]
follow_imports = "silent"

[[tool.mypy.overrides]]
# BASELINE: pre-existing type debt. Ratchet DOWN — never add modules here.
# Remove a line once its module type-checks clean.
module = [
    "domestique.debug_trace",
    "domestique.sdk",
    "domestique.detectors.local_llm",
    "domestique.audit",
    "domestique.transport",
    "domestique.detectors.pii",
    "domestique.detectors.registry",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
